# console-game

./: .gitignore  CMakeLists.txt  basicobjects.cpp  basicobjects.h  bouncingball.cpp  bouncingball.h  bounicngball.cpp  console.cpp  console.h  debug.bat  drawable.h  game.cpp  game.h  gameobject.h  input.cpp  input.h  inputhandler.cpp  inputhandler.h  main.cpp  myincludes.h  player.cpp  player.h  renderer.cpp  renderer.h  run.bat  shape.cpp  shape.h  sprite.cpp  sprite.h
